# CoxaAI-Torch-Framework

./: .gitignore  README.md  env_template  mnist_ViT.ipynb  pyproject.toml
containerizing/files_for_leo/: pytorch_cv.def  slurm_create_singularity_container.sh
coxaaitorch/augmentation/: __init__.py  autoaugment.py  test.ipynb  transforms.py
coxaaitorch/models/: BaseClassBinary.py  BaseNetwork.py  __init__.py  model_registry.py  test.py
coxaaitorch/playground/: BaseMultiClass.py  SimpleTrainingLoop.py
coxaaitorch/utilities/: DataModule.py  __init__.py  calculate_mean_std.py  h5_info_printout_slurm.sh  metric_experiment_printout.py
logs/output_logs/: training_prints_14223118.out  training_prints_14224239.out  training_prints_14224325.out  training_prints_14224328.out  training_prints_14224495.out  training_prints_14224511.out  training_prints_14224537.out  training_prints_14224550.out
models/ConvNextMNIST/: ConvNextMNIST.py  ConvNextMNIST_slurm.sh
singularity/: pytorch_cv.def
singularity/containers/: pytorch_cv_with_metrics.def  slurm_create_singularity_container.sh
singularity/definitions_scripts_logs/: log_create_container_pytorch_cv_with_metrics.out  pytorch_cv_with_metrics.def  slurm_create_singularity_container.sh
src/augmentation/: autoaugment.py  autoaugment_individual_augmentations.py
src/models/: BaseMultiClass.py  BaseNormalAbnormal.py  SimpleTrainingLoop.py
src/utilities/: H5DataModule.py  __init__.py  calculate_mean_std.py  calculate_mean_std_slurm.sh  dataset.py  (+3 more)
utilities/: dataset.py  h5_info_printout.py  h5_info_printout_slurm.sh
(+153 files in other folders)
